<?xml version="1.0"?>
<package format="2">
  <name>dbscan</name>
  <version>0.0.1</version>
  <description>dbscan</description>
  
  <maintainer email="lorenwel@ethz.ch">Lorenz Wellhausen</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>libnabo</depend>
  
</package>

